2004-09-11 Alain Magloire

	Allow grouping of namespace in the outliner.
	See the appereance namespace.

	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinerProvider.java
	* src/org/eclipse/cdt/internal/ui/preferences/AppearancePreferencePage.java
	* src/org/eclipse/cdt/ui/CElementGrouping.java
	* src/org/eclipse/cdt/ui/CUIPreferenceInitializer.java
	* src/org/eclipse/cdt/ui/NamespacesGrouping.java
	* src/org/eclipse/cdt/ui/PreferenceConstants.java

2004-09-09 David Inglis

	Fix large gap between image and text in CView and ProjectView

	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/ProjectsView.java
	* src/org/eclipse/cdt/internal/ui/cview/CView.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewLabelProvider.java
	
2004-09-09 David Inglis
	Fix for 36837 - CVS decoration updating

	* src/org/eclipse/cdt/internal/ui/editor/CEditorErrorTickUpdater.java
  	* src/org/eclipse/cdt/internal/ui/util/ProblemTreeViewer.java

	removed Eclipse 1.0 way of decorating label providers - use label decorators

  	* src/org/eclipse/cdt/internal/ui/ErrorTickAdornmentProvider.java
  	* src/org/eclipse/cdt/internal/ui/IAdornmentProvider.java

	refactored to internal.ui.viewsupport
	
  	* src/org/eclipse/cdt/internal/ui/CElementImageProvider.java
  	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/AppearanceAwareLabelProvider.java
  	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/CUILabelProvider.java
  	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/ProblemsLabelDecorator.java
  	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/DecoratingCLabelProvider.java
  	* src/org/eclipse/cdt/internal/ui/StandardCElementLabelProvider.java
  	* src/org/eclipse/cdt/internal/ui/dialogs/cpaths/CPElementLabelProvider.java

	changes due to refactor
	
  	* browser/org/eclipse/cdt/internal/ui/browser/cbrowsing/CBrowsingPart.java